<resources>
    <string name="app_name">Waochers</string>
    <string name="title_activity_homeactivity">Waochers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="toast_unsuccessful_google_login">Sorry! Login unsuccessful. Please try again later.</string>
    <string name="app_id">141362046230316</string>
    <string name="loading">Loading..</string>
    <string name="text_user_name">User Name</string>
    <string name="text_email_or_phone">Email or phone</string>
    <string name="text_get_coupon">Get coupon</string>
    <string name="text_my_coupons">My Coupons</string>
    <string name="text_my_shops">My Shops</string>
    <string name="text_report_issue">Report Issue</string>
    <string name="text_about_us">About Us</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_log_in_again">You have been logged out. Please log in again to continue.</string>
    <string name="signing_out">Signing Out</string>
    <string name="text_my_account_title">My Account</string>

    <string name="title_no_internet">No Internet!</string>
    <string name="no_internet_message">Click Ok to enable data.</string>

    <string name="text_enter_valid_email">Please enter a valid email.</string>
    <string name="text_enter_registered_email_or_phone">Enter registered email or 10-digit mobile number.</string>
    <string name="text_enter_valid_email_or_phone">Please enter a valid email or phone number.</string>
    <string name="text_sqlite_exception">Oops! Looks like some thing messed with the backend! Be right back.</string>
    <string name="text_enter_password">Please enter a password before proceeding.</string>
    <string name="text_not_yet_registered">Oops! Looks like you haven\'t registered with us yet! Kindly register to continue or login with fb or google.</string>
    <string name="text_invalid_password">Invalid password! Please try again.</string>
    <string name="text_btn_register">Register</string>
    <string name="et_register_name_hint">Name</string>
    <string name="et_register_email_or_phone_hint">Email or Phone Number</string>
    <string name="et_register_email">Email </string>
    <string name="et_register_phone">Phone </string>

    <string name="et_register_password_hint">Password</string>
    <string name="et_register_confirm_password">Confirm Password</string>
    <string name="blank_name_error">Name field cannot be blank.</string>
    <string name="text_enter_valid_password">Password must have at least 6 characters.</string>
    <string name="text_pswd_cnfrm_pswd">Password and confirm password do not match.</string>
    <string name="text_agree_to_tnc">Please agree to our terms and conditions before proceeding forward</string>
    <string name="invalid_name_error">Name can contain only alphabets and spaces.</string>
    <string name="text_email_exists">This email id is already registered with us.Use Forgot password option to access your profile.</string>
    <string name="text_mobile_number_exists">This mobile number is already registered with us.Use Forgot password option to access your profile.</string>
    <string name="text_logged_in">You are now registered at Waochers! Happy Discounting :)</string>
    <string name="et_forgot_password_email_or_phone_hint">Email or Phone Number</string>
    <string name="et_otp">OTP</string>
    <string name="text_btn_change_password">Reset Password</string>
    <string name="text_btn_resend_OTP">Resend OTP</string>
    <string name="text_btn_generate_otp">Generate OTP</string>
    <string name="msg_invalid_otp">Invalid OTP! Please try again.</string>
    <string name="msg_exceeded_number_of_tries">You have exceeded maximum number of tries. Please try again after sometime.</string>
    <string name="title_exceeded_number_of_tries">Exceeded tries!</string>
    <string name="text_btn_ok">OK</string>
    <string name="msg_password_reset_successful">Password reset successful! Login to continue.</string>
    <string name="msg_password_reset_unsuccessful">Password Reset failed. Please try again later.</string>
    <string name="service_not_available">Service is not available</string>
    <string name="invalid_lat_long_used">Invalid lat long</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">address found</string>
    <string name="no_geocoder_available">No geocoder avialable</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_blahactivity">blahactivity</string>
    <string name="et_otp_hint">OTP</string>
    <string name="text_btn_verify_otp">Verify OTP</string>
    <string name="fb_login_protocol_scheme">141362046230316</string>
    <string name="plaese_login_to_continue">Please login to coninue!</string>
    <string name="you_are_in">You are in</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>

</resources>
