<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="project.stutisrivastava.waochers.ui.RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_register_name"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/waochers_tm_yellow"
        android:hint="@string/et_register_name_hint"/>

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@+id/et_register_name"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/waochers_tm_yellow"
        android:hint="@string/et_register_email"/>

    <EditText
        android:id="@+id/et_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@+id/et_register_email"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/waochers_tm_yellow"
        android:hint="@string/et_register_phone"/>

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_below="@+id/et_register_phone"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/waochers_tm_yellow"
        android:hint="@string/et_register_password_hint"/>

    <EditText
        android:id="@+id/et_register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@+id/et_register_password"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/waochers_tm_yellow"
        android:hint="@string/et_register_confirm_password"/>

    <RelativeLayout
        android:id="@+id/rl_terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_register_confirm_password"
        android:layout_marginTop="15dp" >

        <CheckBox
            android:id="@+id/chkboxtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:singleLine="true"
            android:text="I agree to "
            android:textColor="@color/Black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/termsConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/chkboxtc"
            android:layout_toRightOf="@+id/chkboxtc"
            android:autoLink="web"
            android:text="Terms and Conditions"
            android:textColor="@color/waochers_tm_yellow"
            android:textColorLink="#000000"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/rl_terms_conditions"
        android:background="@drawable/button_rounded_corner"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/text_btn_register"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>
