<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.stutisrivastava.waochers.ui.ForgotPasswordActivity">

    <TextView android:id="@+id/tv_forgot_password_heading"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="@color/waochers_tm_yellow"
        android:text="   Forgot Password"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:padding="5dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/et_forgot_password_email_or_phone"
        android:inputType="textPersonName"
        android:layout_below="@+id/tv_forgot_password_heading"
        android:singleLine="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/waochers_tm_yellow"
        android:hint="@string/et_forgot_password_email_or_phone_hint"/>

    <EditText
        android:id="@+id/et_forgot_password_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_below="@+id/et_forgot_password_email_or_phone"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/waochers_tm_yellow"
        android:hint="@string/et_register_password_hint"/>

    <EditText
        android:id="@+id/et_forgot_password_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:singleLine="true"
        android:layout_below="@+id/et_forgot_password_new_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/waochers_tm_yellow"
        android:hint="@string/et_register_confirm_password"/>

    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_forgot_password_confirm_password"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="3dp"
            android:text="Enter the otp send to your registered email."/>

        <EditText
            android:id="@+id/et_forgot_password_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="numberPassword"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/waochers_tm_yellow"
            android:hint="@string/et_otp"/>

        <Button
            android:id="@+id/btnResendOTP"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_rounded_corner"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_btn_resend_OTP"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnResetPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/ll_otp"
        android:background="@drawable/button_rounded_corner"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/text_btn_generate_otp"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>
